--- a/templates/secrets-roll.html
+++ b/templates/secrets-roll.html
@@ -4,9 +4,9 @@
   <ol class="dice-rolls">
     {{#each this.rolls}}
     {{#if this.result}}
-    <li class="roll die bobd6"{{#if (eq this.result 6)}} style="color: var(--holoblue);"{{/if}}{{#if (lteq this.result 3)}} style="color: red;"{{/if}}{{#if (eq this.result 4)}} style="color: var(--almost_white);"{{/if}}{{#if (eq this.result 5)}} style="color: var(--almost_white);"{{/if}}>{{{this.result}}}</li>
+    <li class="roll die bobd6"{{#if (eq this.result 6)}} style="color: var(--holoblue);"{{/if}}{{#if (lte this.result 3)}} style="color: red;"{{/if}}{{#if (eq this.result 4)}} style="color: var(--almost_white);"{{/if}}{{#if (eq this.result 5)}} style="color: var(--almost_white);"{{/if}}>{{{this.result}}}</li>
     {{else}}
-    <li class="roll die bobd6"{{#if (eq this.roll 6)}} style="color: var(--holoblue);"{{/if}}{{#if (lteq this.roll 3)}} style="color: red;"{{/if}}{{#if (eq this.roll 4)}} style="color: var(--almost_white);"{{/if}}{{#if (eq this.roll 5)}} style="color: var(--almost_white);"{{/if}}>{{{this.roll}}}</li>
+    <li class="roll die bobd6"{{#if (eq this.roll 6)}} style="color: var(--holoblue);"{{/if}}{{#if (lte this.roll 3)}} style="color: red;"{{/if}}{{#if (eq this.roll 4)}} style="color: var(--almost_white);"{{/if}}{{#if (eq this.roll 5)}} style="color: var(--almost_white);"{{/if}}>{{{this.roll}}}</li>
     {{/if}}
     {{/each}}
   </ol>
