--- a/templates/secrets-roll.html
+++ b/templates/secrets-roll.html
@@ -1,6 +1,11 @@
 <div class="dice-tooltip">
   {{#if action}}<div class="chat-label label-stripe-chat">{{action}}</div>{{/if}}
-  <div class="die {{roll_status}}">{{roll_status}}</div>
+  {{#if zeromode}}
+    <div class="chat-label-small-red label-stripe-chat-small-red">
+     Rolled zero dice, taking lowest 
+    </div>
+  {{/if}}
+  <div class="die {{roll_status}}">{{#if resist_status}}{{resist_status}}{{else}}{{roll_status}}{{/if}}</div>
   <ol class="dice-rolls">
     {{#each this.rolls}}
     {{#if this.result}}
