--- a/styles/buried.css
+++ b/styles/buried.css
@@ -142,6 +142,14 @@ li:hover [role="tooltip"] {
   padding: 3px 5px 0;
 }
 
+.chat-label-small-red {
+  background-color: red;
+  color: #191813;
+  font-size: small;
+  text-align: center;
+  padding: 3px 5px;
+  font-weight: bold;
+}
 .healing {
   position: relative;
   padding: 5px;
